--- a/isl_api_doc.yaml
+++ b/isl_api_doc.yaml
@@ -12,7 +12,7 @@ info:
     name: ISL
     url: xxxxxx
 servers:
-  - url: http://xx.xx.xx.xx:3003/v1
+  - url: http://35.240.165.193:3003/v1
 paths:
   /auth/register:
     post:
